<resources>
    <string name="app_name">MedHubRebuild</string>
    <string name="register">Register</string>
    <string name="login">Login</string>
    <string name="medhub">MedHub</string>
    <string name="password">Password</string>
    <string name="username">Username</string>
    <string name="create_an_account">Create an Account</string>
    <string name="welcome_message_patient">Welcome Patient!</string>
    <string name="welcome_message_admin">Welcome Admin!</string>
    <string name="welcome_message_doctor">Welcome Doctor!</string>
    <string name="log_out">Log Out</string>
    <string name="view_chats">View Chats</string>
    <string name="appointments">Appointments</string>
</resources>
