<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".admin_home">

    <TextView
        android:id="@+id/welcomeMessageText"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="164dp"
        android:text="@string/welcome_message_admin"
        android:textSize="25sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.498"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <Button
        android:id="@+id/appointmentsButton"
        android:layout_width="150dp"
        android:layout_height="60dp"
        android:layout_marginTop="100dp"
        android:text="@string/appointments"
        android:textAllCaps="false"
        android:textColor="@color/medhubblue"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.498"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/welcomeMessageText" />

    <Button
        android:id="@+id/viewChatButton"
        android:layout_width="150dp"
        android:layout_height="60dp"
        android:layout_marginTop="60dp"
        android:text="@string/view_chats"
        android:textAllCaps="false"
        android:textColor="@color/medhubblue"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.498"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/appointmentsButton" />

    <Button
        android:id="@+id/logOutButton"
        android:layout_width="150dp"
        android:layout_height="60dp"
        android:layout_marginTop="60dp"
        android:text="@string/log_out"
        android:textAllCaps="false"
        android:textColor="@color/medhubblue"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/viewChatButton" />

</androidx.constraintlayout.widget.ConstraintLayout>